--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.daemon=false
 modVersion = 0.2.0-dev
 
 # The modid of our mod
-modId = hauolilottery
+modId = hauolicasino
 
 # The maven group of your mod
 # See "http://maven.apache.org/guides/mini/guide-naming-conventions.html"
@@ -25,7 +25,7 @@ modGroup = eu.mccluster
 
 # The name of the mod file (excluding the version)
 # Maven and Gradle don't like spaces in filenames, so use a different separator character like '-'
-modFileName = HauoliLottery
+modFileName = HauoliCasino
 # modFileName = Mod-Name
 
 # The version of Minecraft we are modding for
